added images in the sidebar.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,34 @@
  </nav>
 
   <main>About
-    <!-- about me -->
-  <section class="page-section" id="about">
-   </section>
+    <h1> MY NAME IS RENNIEL Pena <br>
+      SENIOR WEB DEVELOPER
+    </h1>
+  <section class="home-right" id="rightpicture">
+    <img src="images/home-right.png" alt="Boy using a computer"></section>
+    <p></p>
    </main>
-  <div id="sidebar">sidebar</div>
+  <div id="sidebar">SERVICES OFFERED
+    <img src="images/s1.png" alt="mouse"></section>
+      <h3>WEB DEVELOPEMENT</h3>
+        <p>WP DEVELOPING</p>
+    <img src="images/s2.png" alt="mouse"></section>
+        <p>UI/UX DESIGN</p>
+    <img src="images/s3.png" alt="mouse"></section>
+        <p>WEB DESIGN</p>
+    <img src="images/s4.png" alt="mouse"></section>
+        <p>SEO OPTIMISE</p>
+  </div>
+   
+
   <div id="content1">content1</div>
+
+
   <div id="content2">content2</div>
+
+
+
   <div id="content3">content3</div>
-  <footer>Footer</footer>
+  <footer>Footer
+
+  </footer>
