Added form and icon links.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Renniel Pena // Web Developer</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <div class="container">
@@ -26,9 +27,11 @@
  </nav>
 
   <main>About
-    <h1> MY NAME IS RENNIEL Pena <br>
-      SENIOR WEB DEVELOPER
+    <h1> Hi there, my name is Renniel Pena<br>
+      JUNIOR WEB DEVELOPER.................
     </h1>
+    <p>Loving the proces as much as the outcome, I take a collaborative, 
+      creative and strategic approach to problem</p>
   <section class="home-right" id="rightpicture">
     <img src="images/home-right.png" alt="Boy using a computer"></section>
     <p></p>
@@ -46,14 +49,31 @@
   </div>
    
 
-  <div id="content1">content1</div>
+  <div id="content1">
+    <h2>RUNNING APP</h2>
+    <div class="box"></div>
+    <img src="images/daily.jpeg" alt="running app"></section>
+  </div>  
+  <div id="content2">
+    <img src="images/02-portfolio-2.jpg" alt="calculator app"></section>
+  </div>
+  
 
-
-  <div id="content2">content2</div>
-
-
-
-  <div id="content3">content3</div>
-  <footer>Footer
-
+  <div id="content3">content3
+    <form>
+      <h2>Contact Form</h2>
+      <label for="name">Contact me</label>
+      <input type="text" id="name-input" placeholder="Enter email address" >
+       <button>Submit</button>
+    <br>
+    <h3>Socials</h3>
+    <div class="icons">
+      <a href="https://www.youtube.com/watch?v=zL19uMsnpSU">
+        <i class="fa-brands fa-facebook fa-5x" ></i>
+      </a>
+      <i class="fa-brands fa-github fa-5x"></i>
+    </div>
+  </div>
+  <footer>
+    © Copyright 2015 Discoveren. All rights reserved.
   </footer>
