Added form and social links.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <img src="images/daily.jpeg" alt="running app"></section>
   </div>  
   <div id="content2">
-    <img src="images/02-portfolio-2.jpg" alt="calculator app"></section>
+    <img src="images/02-portfolio-2.jpg" alt="calculator app">
+  <h2>CALCULATOR APP</h2>
+  </section>
   </div>
   
 
@@ -69,9 +71,14 @@
     <h3>Socials</h3>
     <div class="icons">
       <a href="https://www.youtube.com/watch?v=zL19uMsnpSU">
-        <i class="fa-brands fa-facebook fa-5x" ></i>
+        <i class="fa-brands fa-facebook fa-5x " ></i>
       </a>
-      <i class="fa-brands fa-github fa-5x"></i>
+      <a href="https://github.com/Discoveren?tab=repositories">
+        <i class="fa-brands fa-github fa-5x"></i>
+      </a>
+      <a href="https://git.bootcampcontent.com/rennielpena-EnLsyg">
+        <i class="fa-brands fa-gitlab fa-5x"></i>
+        </a>
     </div>
   </div>
   <footer>
